--- a/index.html
+++ b/index.html
@@ -9,23 +9,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="mainBox">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+    <div id="grid" class="grid grid-cols-4 gap-2 sm:gap-3 bg-[#9B8674] p-2 sm:p-3 rounded-lg sm:rounded-3xl"></div>
+    <script src="script.js" defer></script>
 </body>
+<style>
+    body, html {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  touch-action: none; /* prevents default scrolling/pinch-zoom */
+  height: 100%;
+}
+
+</style>
 </html>
